--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Brandon CS Sanders
 email: 1st@thesanders.us
 description: >- # this means to ignore newlines until "baseurl:"
-  Random bits of interest to Brandon CS Sanders.
+  Random bits of interest.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://brandon-cs-sanders.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: BrandonCSanders
